# oneclaw

./: .gitignore  Dockerfile  MAP.md  README.md  eslint.config.mjs  package.json  plan.claude.md  plan.codex.md  plan.gemini.md  plan.md  pnpm-lock.yaml  progress.md  ralph-instructions.md  ralph.sh  vitest.config.ts  vitest.workspace.ts
.github/workflows/: ci.yml  desktop-build.yml  desktop-release.yml  release.yml  smoke-install.yml
apps/desktop/: index.html  package.json  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/binaries/: .gitignore
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/sidecar/: context.ts  event-emitter.ts  main.ts  router.ts  tsconfig.json
apps/desktop/src-tauri/sidecar/__tests__/: e2e-happy-path.test.ts  ipc-contract.test.ts  perf-sanity.test.ts  security-sanity.test.ts
apps/desktop/src-tauri/sidecar/handlers/: agent.ts  channel.ts  config.ts  cost.ts  doctor.ts  errors.ts  model.ts  secret.ts
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: ipc.rs  mod.rs  sidecar.rs
docs/: harness.md  master-plan.md  vision.md
docs/contracts/: agent-adapter.md  model-config.md  secret-storage.md
docs/decisions/: runtime-integration.md
docs/modules/: agent-adapter.md  (+6 more)
phase1/: human-review.md  plan.md  progress.md
phase2/: human-review.md  plan.md  progress.md
scripts/: copy-runtime-assets.mjs  install.sh  smoke-pack.sh  test-install-script.sh
(+74 files in other folders)
