[package]
name = "oneclaw-desktop"
version = "0.1.0"
description = "OneClaw desktop application"
authors = ["OneClaw"]
edition = "2021"

[lib]
name = "oneclaw_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "sync", "time", "macros"] }
